feat: create utils pagination function
